objects/EUR_ISP_Spend_Activity_Type__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Accrual_Phasing__c</fullName>
        <label>Accrual Phasing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-Rata</fullName>
                </value>
                <value>
                    <fullName>Start of activity</fullName>
                </value>
                <value>
                    <fullName>End of activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Budget_Phasing__c</fullName>
        <label>Budget Phasing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-Rata</fullName>
                </value>
                <value>
                    <fullName>Start of activity</fullName>
                </value>
                <value>
                    <fullName>End of activity</fullName>
                </value>
                <value>
                    <fullName>No deduction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Activation</fullName>
                </value>
                <value>
                    <fullName>Support Costs</fullName>
                </value>
                <value>
                    <fullName>Customer Development &amp; Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Demand Driving</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Minimize Cost to Serve</fullName>
                </value>
                <value>
                    <fullName>Protecting Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
                <value>
                    <fullName>BQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Customer_Consumer__c</fullName>
        <label>Customer / Consumer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Default_Phasing_Method__c</fullName>
        <label>Default Phasing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pro-Rata</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Conditional_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Conditional Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Lump_Sum_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Lump Sum 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Lump_Sum_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Lump Sum 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Percentage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Percentage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Variable_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Variable Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Display_Visible_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Visible Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_GL_Mapping_Accrual_Balancing_Acc__c</fullName>
        <label>GL Mapping Accrual Balancing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_GL_Mapping_Accrual__c</fullName>
        <label>GL Mapping Accrual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_GL_Mapping_Invoice__c</fullName>
        <label>GL Mapping Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Last_Three_Feet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Three Feet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_New_Prisma_Category__c</fullName>
        <label>New Prisma Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_ISP_Touchpoints_Support_Drivers__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP1110 - TV</fullName>
                </value>
                <value>
                    <fullName>AP1120 - Outdoor</fullName>
                </value>
                <value>
                    <fullName>AP1130 - Other Traditional Media</fullName>
                </value>
                <value>
                    <fullName>AP1140 - Online Advertising</fullName>
                </value>
                <value>
                    <fullName>AP1150 - Sponsorship</fullName>
                </value>
                <value>
                    <fullName>AP1160 - Search &amp; Reviews</fullName>
                </value>
                <value>
                    <fullName>AP1210 - Owned Media</fullName>
                </value>
                <value>
                    <fullName>AP1220 - Other Content</fullName>
                </value>
                <value>
                    <fullName>AP1310 - eCommerce</fullName>
                </value>
                <value>
                    <fullName>AP1320 - On-trade Visibility</fullName>
                </value>
                <value>
                    <fullName>AP1330 - Off-trade Visibility</fullName>
                </value>
                <value>
                    <fullName>AP1340 - Packaging / VAP</fullName>
                </value>
                <value>
                    <fullName>AP1410 - eCRM</fullName>
                </value>
                <value>
                    <fullName>AP1420 - On-trade Activation</fullName>
                </value>
                <value>
                    <fullName>AP1430 - Off-trade Activation</fullName>
                </value>
                <value>
                    <fullName>AP1440 - Ambassador Programs</fullName>
                </value>
                <value>
                    <fullName>AP1450 - Brand Experience and PR</fullName>
                </value>
                <value>
                    <fullName>AP1510 - Consumer &amp; Shopper Insight &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>AP1520 - NPD Development</fullName>
                </value>
                <value>
                    <fullName>AP1530 - Production Costs and Agency Fees</fullName>
                </value>
                <value>
                    <fullName>AP2110 - Merchandising Costs</fullName>
                </value>
                <value>
                    <fullName>AP2120 - Customer &amp; Trade Incentives and Events</fullName>
                </value>
                <value>
                    <fullName>AP2130 - Other Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>AP2210 - Range &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>AP2220 - Visibility (Demand Driving)</fullName>
                </value>
                <value>
                    <fullName>AP2230 - Promotional</fullName>
                </value>
                <value>
                    <fullName>AP2240 - Category Development</fullName>
                </value>
                <value>
                    <fullName>AP2310 - Other Growth</fullName>
                </value>
                <value>
                    <fullName>AP2410 - Supply Chain</fullName>
                </value>
                <value>
                    <fullName>AP2420 - Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Override_Phasing_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Phasing Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Prisma_Category__c</fullName>
        <label>Former Prisma Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R023 – SERVICES PAID TO DISTRIBUTORS</fullName>
                </value>
                <value>
                    <fullName>R073 - TRADE A&amp;P EXPENSES</fullName>
                </value>
                <value>
                    <fullName>R071 - MEDIA EXPENSES</fullName>
                </value>
                <value>
                    <fullName>R072 - OTHER CONSUMER A&amp;P EXPENSES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Product_Level_Of_Input__c</fullName>
        <label>Product Level of Input</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Brand Quality</fullName>
                </value>
                <value>
                    <fullName>Brand Quality Size</fullName>
                </value>
                <value>
                    <fullName>SKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity_Type_Name_English__c</fullName>
        <label>Spend Activity Type Name - English</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity_Type_Name__c</fullName>
        <externalId>true</externalId>
        <label>Spend Activity Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Type__c</fullName>
        <label>Spend Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SFA Contract</fullName>
                </value>
                <value>
                    <fullName>Marketing Project</fullName>
                </value>
                <value>
                    <fullName>Commercial Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_ISP_Touchpoints_Support_Drivers__c</fullName>
        <label>Touchpoints / Support / Drivers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_ISP_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Other Traditional Media</fullName>
                </value>
                <value>
                    <fullName>Online Advertising</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Search &amp; Reviews</fullName>
                </value>
                <value>
                    <fullName>Owned Media</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>On-trade Visibility</fullName>
                </value>
                <value>
                    <fullName>Off-trade Visibility</fullName>
                </value>
                <value>
                    <fullName>Packaging / VAP</fullName>
                </value>
                <value>
                    <fullName>eCRM</fullName>
                </value>
                <value>
                    <fullName>On-trade Activation</fullName>
                </value>
                <value>
                    <fullName>Off-trade Activation</fullName>
                </value>
                <value>
                    <fullName>Ambassador Programs</fullName>
                </value>
                <value>
                    <fullName>Brand Experience and PR</fullName>
                </value>
                <value>
                    <fullName>Consumer &amp; Shopper Insight &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>NPD Development</fullName>
                </value>
                <value>
                    <fullName>Production Costs and Agency Fees</fullName>
                </value>
                <value>
                    <fullName>Merchandising Costs</fullName>
                </value>
                <value>
                    <fullName>Customer &amp; Trade Incentives and Events</fullName>
                </value>
                <value>
                    <fullName>Other Trade A&amp;P</fullName>
                </value>
                <value>
                    <fullName>Range &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Promotional</fullName>
                </value>
                <value>
                    <fullName>Category Development</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Supply Chain</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Spend Activity Type (EU)</label>
    <nameField>
        <displayFormat>SAT-{00000000}</displayFormat>
        <label>Spend Activity Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Spend Activity Types (EU)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>